# DevTraining

./: .gitignore
MachineLearning/: BinaryClassifier.ipynb  README.md
MachineLearning/CUDA/: cudatime.out  vector_add.cu  vector_add_threads.cu
MachineLearning/CUDA/NeuralNetwork/: CMakeLists.txt  Main.cu
MachineLearning/CUDA/NeuralNetwork/include/: BCECost.hh  CoordinatesDataset.hh  LinearLayer.hh  Matrix.hh  NNException.hh  NNLayer.hh  NeuralNetwork.hh  ReLUActivation.hh  Shape.hh  SigmoidActivation.hh
MachineLearning/CUDA/NeuralNetwork/scripts/: env.sh
MachineLearning/CUDA/NeuralNetwork/src/: BCECost.cu  CoordinatesDataset.cu  LinearLayer.cu  Matrix.cu  NeuralNetwork.cu  ReLUActivation.cu  Shape.cu  SigmoidActivation.cu
NA62/GTk/: GTkPlacement.py  helper.py
NA62/RICH/: Channels_0.txt  Channels_1.txt  Channels_1_S.txt  Channels_2.txt  GeoSC.txt  MC_tester.py  QEFitting.py  RICH-PMsNeighboursMap_0.txt  RICH-PMsNeighboursMap_1.txt  RICH-PMsNeighboursMap_1_S.txt  RICH-PMsNeighboursMap_2.txt  RICH-RawDecoderSettings.run020000_0000.txt  RICHAlgoVis.py  RICHAlgoVisSiPM.py  RICHAlgoVisSiPM_9x9.py  RICHAlgoVisSiPM_9x9_Big.py  RICHAlgoVisSiPM_9x9_Square.py  RawDecoder_0.txt  RawDecoder_1.txt  RawDecoder_1_S.txt  RawDecoder_2.txt  helper.py
SQL/CPPLearn/: CMakeLists.txt  main.cc  test.db
VisWithPy/: app.py  requirements.txt
VisWithPy/NatGas/: DecryptCsv.py  EncryptCsv.py  EuroNatStorApi.py  NatGasapp.py  weatherApi.py
VisWithPy/assets/: style.css
playground/Shaders/: eights.frag  nines.frag  pimp.frag  quatre.frag  secondis.frag  sevund.frag  sixxx.frag  (+3 more)
(+61 files in other folders)
